# tensor-power-flow

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: numba_cuda.py  numba_try.py  run_benchmark.py
src/tensor_power_flow/: __init__.py  base_power.py  data_checker.py  ficional_grid_generator.py  numba_cuda_functions.py  numba_functions.py  tensor_power_flow.py
tests/: test_dummy.py
