[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-power-flow"
authors = [{name = "Tony Xiang", email = "tonyxiang@live.nl"}]
description = "Trial implementation of tensor power flow"
readme = "README.md"
license = {text = "BSD License (BSD)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "power-grid-model",
    "numba"
]
version = "0.1"

[project.optional-dependencies]
dev = [
  'pytest',
  'black',
  'isort',
  'pylint'
]

[tool.setuptools.packages.find]
where = ["src"] 
namespaces = false 

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 120
